--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
-<!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="UTF-8">
-    <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hi, I'm Seb!</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <script type="module" src="/src/main.ts"></script>
-  </body>
+    <link rel="stylesheet" href="index.css">
+</head>
+<body>
+    <div class="container">
+        <h1>Hi, I'm Seb!</h1>
+        <p>I'm a software engineer and a product creator.</p>
+        <p>I'm currently working at <a href="https://www.ramseysolutions.com/company/careers">Ramsey</a> as a software engineer in test.</p>
+        <p>I'm also a writer and a pencil drawer.</p>
+    </div>
+</body>
 </html>
