--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <h1>Hi, I'm Seb!</h1>
         <p>I'm a software engineer and a product creator.</p>
         <p>I'm currently working at <a href="https://www.ramseysolutions.com/company/careers">Ramsey</a> as a software engineer in test.</p>
-        <p>I'm also a writer and a pencil drawer.</p>
+        <p>I'm curious about how to build products that help people live better lives.</p>
     </div>
 </body>
 </html>
