--- a/index.html
+++ b/index.html
@@ -7,10 +7,14 @@
 </head>
 <body>
     <div class="container">
-        <h1>Hi, I'm Seb!</h1>
-        <p>I'm a software engineer and a product creator.</p>
-        <p>I'm currently working at <a href="https://www.ramseysolutions.com/company/careers">Ramsey</a> as a software engineer in test.</p>
-        <p>I'm curious about how to build products that help people live better lives.</p>
+        <section class="hero">
+            <h1 class="fade-text">Hi, I'm Seb!</h1>
+            <h1 class="appear-text">Hola, Soy Seb!</h1>
+        </section>
+        <div class="content">
+            <p class="fade-p-1">I'm a software engineer and a product creator, currently working at <a href="https://www.ramseysolutions.com/company/careers">Ramsey</a> as a software engineer in test.</p>
+            <p class="fade-p-2">I'm curious about how to build products that help people live better lives. Get in touch! <a href="https://www.linkedin.com/">LinkedIn</a></p>
+        </div>
     </div>
 </body>
 </html>
