--- a/index.html
+++ b/index.html
@@ -16,5 +16,7 @@
             <p class="fade-p-2">I'm curious about how to build products that help people live better lives. Get in touch! <a href="https://www.linkedin.com/">LinkedIn</a></p>
         </div>
     </div>
+    <canvas id="particleCanvas"></canvas>
+    <script src="particles.js"></script>
 </body>
 </html>
