--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
         <div class="content">
             <p class="fade-p-1">I'm a software engineer and a product creator, currently working at <a href="https://www.ramseysolutions.com/company/careers">Ramsey</a> as a software engineer in test.</p>
             <p class="fade-p-2">I'm curious about how to build products that help people live better lives. </p>
-            <p class="fade-p-3">Get in touch! <a href="https://www.linkedin.com/">LinkedIn</a></p>
+            <div class="fade-p-3">
+                <p>Get in touch!</p>
+                <p><a href="https://www.linkedin.com/in/sebastian-bustos-86a210a1/">LinkedIn</a></p>
+                <p><a href="https://www.github.com/tatancode">GitHub</a></p>
+            </div>
         </div>
     </div>
     <canvas id="particleCanvas"></canvas>
